--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -13,17 +13,24 @@ header {
     z-index: 30;
 }
 
+ul {
+    padding: 0;
+}
+
 .header-logo {
     padding-left: 38px;
     font-size: 56px;
 }
 
 .header-logo a {
-    font-style: "Hiragino Kaku Gothic ProN";
+    font-family: "Hiragino Kaku Gothic ProN";
+}
+.drawer_toggle img {
+    display: none;
 }
 .nav ul {
     float: left;
-    margin-right: 111px;
+    margin-right: 30px;
 }
 
 .nav li {
@@ -32,12 +39,27 @@ header {
     margin: 0 20px;
     color: rgb(12, 12, 12);
 }
+#drawer_toggle {
+    float: right;
+}
+.nav-sp {
+    width: 768px;
+    height: 1900px;
+    opacity: 0.8;
+    background-color: #FFFFFF;
+    display: flex;
+    flex-flow: column;
+    position: fixed;
+    font-size: 56px;
+    text-align: center;
+    display: none;
+}
 
 .top-wrap {
     width: 1440px;
     height: 820px;
     background-image: url('../image/headback.png');
-    size: cover;
+    background-size: cover;
     position: relative;
     background-repeat: no-repeat;
     z-index: 20;
@@ -122,6 +144,7 @@ header {
     height: 1040px;
     background-repeat: no-repeat;
     background-image: url('../image/IMG_9642.png');
+    background-size: cover;
 }
 
 .contents-img {
@@ -139,4 +162,107 @@ footer {
     width: 1440px;
     height: 128px;
     background-color: #C3BCBC;
+}
+
+@media screen and (max-width: 768px) {
+	/* 768px以下に適用されるCSS（スマホ用） */
+    body {
+        width: 768px;
+    }
+    header {
+        width: 768px;
+    }
+    .top-wrap {
+        background-size: cover;
+        position: relative;
+        width: auto;
+        height: 500px;
+    }
+    .nav {
+        display: none;
+    }
+    #drawer_toggle {
+        float: right;
+    }
+    .nav-sp.open {
+        width: 768px;
+        height: 1900px;
+        opacity: 0.8;
+        background-color: #FFFFFF;
+        display: flex;
+        flex-flow: column;
+        position: fixed;
+        font-size: 56px;
+        text-align: center;
+        display: none;
+    }
+    .top-wrap p {
+        font-size: 48px;
+        left: 184px;
+    }
+    .containar {
+        width: 100%;
+        height: 180%;
+
+    }
+    .containar-box-1{
+        width: 40%;
+        height: 20%;
+        flex-direction: column-reverse;
+        margin: auto;
+        padding: 0;
+    }
+    .containar-box-1-text {
+        font-size: 25px;
+    }
+    .containar-box-1-img img {
+        width: 100%;
+        height: auto;
+    }
+    .containar-box-2 {
+        width: 40%;
+        height: 20%;
+        align-items: center;
+        flex-direction: column;
+        margin: auto;
+        padding: 0;
+    }
+    .containar-box-2-text {
+        font-size: 25px;
+    }
+    .containar-box-2-img img {
+        width: 100%;
+        height: auto;
+    }
+    .containar-box-3 {
+        width: 40%;
+        height: 20%;
+        align-items: center;
+        flex-direction: column-reverse;
+        margin: auto;
+        padding: 0;
+
+    }
+    .containar-box-3-text {
+        font-size: 25px;
+    }
+    .containar-box-3-img img {
+        width: 100%;
+        height: auto;
+    }
+    .contents {
+        width: 100%;
+        height: auto;
+        background-size: cover
+    }
+    .contents-img {
+        margin-left: 165px;
+        margin-top: 330px;
+        width: 60%;
+        height: auto;
+    }
+    footer {
+        width: 100%;
+        height: 60px;
+    }
 }
