コメント2 index.html

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,13 +4,14 @@ body {
 }
 
 header {
-    width: 1440px;
+    width: 100%;
     height: 80px;
     background-color: rgb(255, 255, 255);
     position: fixed;
     display: flex;
     justify-content: space-between;
     z-index: 30;
+    top: 0;
 }
 
 ul {
@@ -22,15 +23,24 @@ ul {
     font-size: 56px;
 }
 
-.header-logo a {
-    font-family: "Hiragino Kaku Gothic ProN";
+.header-logo img {
+    position: absolute;
+    width: 69px;
+    height: auto;
+    top: 1%;
+    left: 5%;
 }
-.drawer_toggle img {
+#drawer_toggle {
     display: none;
+    float: right;
+}
+
+.nav {
+    margin-right: 6%;
+    margin-top: 2%;
 }
 .nav ul {
     float: left;
-    margin-right: 30px;
 }
 
 .nav li {
@@ -39,11 +49,9 @@ ul {
     margin: 0 20px;
     color: rgb(12, 12, 12);
 }
-#drawer_toggle {
-    float: right;
-}
+
 .nav-sp {
-    width: 768px;
+    width: 100%;
     height: 1900px;
     opacity: 0.8;
     background-color: #FFFFFF;
@@ -56,95 +64,95 @@ ul {
 }
 
 .top-wrap {
-    width: 1440px;
+    width: 100%;
     height: 820px;
     background-image: url('../image/headback.png');
     background-size: cover;
     position: relative;
     background-repeat: no-repeat;
     z-index: 20;
+    text-align: -webkit-center;
 }
 
 .top-wrap p {
-    position: absolute;
-    top: 50px;
-    right: 293px;
-    left: 292px;
     font-size: 96px;
     color: rgb(255, 255, 255);
     font-family: 'Noto Serif JP', serif;
     width: 1000px;
+    position: relative;
+    padding-top: 10%;
 }
 
-.containar {
-    width: 1440px;
-    height: 1780px;
+.main {
+    width: 100%;
+    height: 1680px;
     background-color: #D9D9D9;
 }
 
-.containar-box-1 {
+.main-box-1 {
     width: 1118px;
     height: 450px;
     display: flex;
     justify-content: space-between;
-    padding-left: 152px;
-    padding-top: 70px;
+    margin: auto;
+    padding: 6% 0 3%;
 }
 
-.containar-box-1-text {
+.main-box-1-text {
     font-size: 45px;
     color: #FFFFFF;
     padding-top: 26px;
-    padding-left: 0 auto;
+    padding-left: 0;
     font-family: 'Sawarabi Mincho', sans-serif;
 }
 
-.containar-box-2 {
+.main-box-2 {
     width: 1118px;
     height: 450px;
     display: flex;
     justify-content: space-between;
-    padding-left: 152px;
-    padding-top: 128px;
+    margin: auto;
+    padding: 3% 0 3%;
 }
 
-.containar-box-2-text {
+.main-box-2-text {
     font-size: 45px;
     color: #FFFFFF;
     padding-top: 26px;
-    padding-right: 0 auto;
+    padding-right: 0;
     font-family: 'Sawarabi Mincho', sans-serif;
 }
 
-.containar-box-2-img img {
+.main-box-2-img img {
     width: 450px;
     height: 450px;
 }
 
 
-.containar-box-3 {
+.main-box-3 {
     width: 1118px;
     height: 450px;
     display: flex;
     justify-content: space-between;
-    padding-left: 152px;
-    padding-top: 128px;
+    margin: auto;
+    padding: 3% 0 6%;
 }
 
-.containar-box-3-text {
+.main-box-3-text {
     font-size: 45px;
     color: #FFFFFF;
     padding-top: 26px;
-    padding-left: 0 auto;
+    padding-left: 0;
     font-family: 'Sawarabi Mincho', sans-serif;
 }
 
 .contents {
-    width: 1440px;
+    width: 100%;
     height: 1040px;
     background-repeat: no-repeat;
     background-image: url('../image/IMG_9642.png');
     background-size: cover;
+    text-align: center;
 }
 
 .contents-img {
@@ -152,14 +160,14 @@ ul {
     height: 100px;
     background-color: #92C492;
     border-radius: 60px;
-    margin-left: 420px;
-    margin-top:842px;
     color: rgb(255, 255, 255);
     font-size: 57px;
+    position: relative;
+    top: 80%;
 }
 
 footer {
-    width: 1440px;
+    width: 100%;
     height: 128px;
     background-color: #C3BCBC;
 }
@@ -167,25 +175,29 @@ footer {
 @media screen and (max-width: 768px) {
 	/* 768px以下に適用されるCSS（スマホ用） */
     body {
-        width: 768px;
+        width: 100%;
     }
     header {
-        width: 768px;
+        width: 100%;
     }
     .top-wrap {
         background-size: cover;
         position: relative;
-        width: auto;
-        height: 500px;
+        width: 100%;
+        height: 400px;
     }
     .nav {
         display: none;
     }
     #drawer_toggle {
+        display: block;
         float: right;
+        z-index: 100;
+        margin-top: 4%;
+        margin-right: 4%;
     }
     .nav-sp.open {
-        width: 768px;
+        width: 100%;
         height: 1900px;
         opacity: 0.8;
         background-color: #FFFFFF;
@@ -198,68 +210,73 @@ footer {
     }
     .top-wrap p {
         font-size: 48px;
-        left: 184px;
+        width: 50%;
     }
-    .containar {
+    .main {
         width: 100%;
         height: 180%;
 
     }
-    .containar-box-1{
+    .main-box-1{
         width: 40%;
         height: 20%;
         flex-direction: column-reverse;
         margin: auto;
-        padding: 0;
+        align-items: center;
+        padding: 3% 0 3%;
     }
-    .containar-box-1-text {
-        font-size: 25px;
+    .main-box-1-text {
+        font-size: 100%;
     }
-    .containar-box-1-img img {
+    .main-box-1-img img {
         width: 100%;
         height: auto;
     }
-    .containar-box-2 {
+    .main-box-2 {
         width: 40%;
         height: 20%;
         align-items: center;
         flex-direction: column;
         margin: auto;
-        padding: 0;
+        padding: 3% 0 3%;
     }
-    .containar-box-2-text {
-        font-size: 25px;
+    .main-box-2-text {
+        font-size: 100%;
     }
-    .containar-box-2-img img {
+    .main-box-2-img img {
         width: 100%;
         height: auto;
     }
-    .containar-box-3 {
+    .main-box-3 {
         width: 40%;
         height: 20%;
         align-items: center;
         flex-direction: column-reverse;
         margin: auto;
-        padding: 0;
-
+        padding: 3% 0 3%;
     }
-    .containar-box-3-text {
-        font-size: 25px;
+    .main-box-3-text {
+        font-size: 100%;
     }
-    .containar-box-3-img img {
+    .main-box-3-img img {
         width: 100%;
         height: auto;
     }
     .contents {
         width: 100%;
-        height: auto;
-        background-size: cover
+        height: 500px;
+        background-size: cover;
+        text-align: justify;
     }
     .contents-img {
-        margin-left: 165px;
-        margin-top: 330px;
         width: 60%;
         height: auto;
+        align-items: center;
+        font-size: 100%;
+        position: relative;
+        top: 80%;
+        left: 20%;
+        margin: 0;
     }
     footer {
         width: 100%;
