--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -6,7 +6,7 @@ body {
 header {
     width: 100%;
     height: 80px;
-    background-color: rgb(255, 255, 255);
+    background-color: #FFFFFF;
     position: fixed;
     display: flex;
     justify-content: space-between;
@@ -76,7 +76,7 @@ ul {
 
 .top-wrap p {
     font-size: 96px;
-    color: rgb(255, 255, 255);
+    color: #FFFFFF;
     font-family: 'Noto Serif JP', serif;
     width: 1000px;
     position: relative;
@@ -90,7 +90,7 @@ ul {
 }
 
 .main-box-1 {
-    width: 1118px;
+    width: 100%;
     height: 450px;
     display: flex;
     justify-content: space-between;
@@ -107,7 +107,7 @@ ul {
 }
 
 .main-box-2 {
-    width: 1118px;
+    width: 100%;
     height: 450px;
     display: flex;
     justify-content: space-between;
@@ -130,7 +130,7 @@ ul {
 
 
 .main-box-3 {
-    width: 1118px;
+    width: 100%;
     height: 450px;
     display: flex;
     justify-content: space-between;
@@ -160,7 +160,7 @@ ul {
     height: 100px;
     background-color: #92C492;
     border-radius: 60px;
-    color: rgb(255, 255, 255);
+    color: #FFFFFF;
     font-size: 57px;
     position: relative;
     top: 80%;
