--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -63,6 +63,33 @@ ul {
     display: none;
 }
 
+.animete-line {
+    width: 0%;
+    height: 1px;
+    background-color: #ffffff;
+    position: fixed;
+    top: 40%;
+    z-index: 120;
+}
+
+.animete-up {
+    width: 100%;
+    height: 50%;
+    background-color: black;
+    position: fixed;
+    top: 10%;
+    z-index: 110;
+}
+
+.animete-down {
+    width: 100%;
+    height: 50%;
+    background-color: black;
+    position: fixed;
+    bottom: 0;
+    z-index: 120;
+}
+
 .top-wrap {
     width: 100%;
     height: 820px;
@@ -104,8 +131,8 @@ ul {
 
 .main-box-1-text {
     font-size: 45px;
-    color: #FFFFFF;
-    padding-top: 26px;
+    color: #598639;
+    padding-top: 15%;
     padding-left: 0;
     font-family: 'Sawarabi Mincho', sans-serif;
 }
@@ -124,8 +151,8 @@ ul {
 
 .main-box-2-text {
     font-size: 45px;
-    color: #FFFFFF;
-    padding-top: 26px;
+    color: #598639;
+    padding-top: 15%;
     padding-right: 0;
     font-family: 'Sawarabi Mincho', sans-serif;
 }
@@ -150,8 +177,8 @@ ul {
 
 .main-box-3-text {
     font-size: 45px;
-    color: #FFFFFF;
-    padding-top: 26px;
+    color: #598639;
+    padding-top: 15%;
     padding-left: 0;
     font-family: 'Sawarabi Mincho', sans-serif;
 }
@@ -163,7 +190,7 @@ ul {
 
 .contents {
     width: 100%;
-    height: 1040px;
+    height: 900px;
     background-repeat: no-repeat;
     background-image: url('../image/IMG_9642.png');
     background-size: cover;
@@ -199,7 +226,7 @@ footer {
         background-size: cover;
         position: relative;
         width: 100%;
-        height: 400px;
+        height: 300px;
     }
     .nav {
         display: none;
@@ -224,8 +251,9 @@ footer {
         display: none;
     }
     .top-wrap p {
-        font-size: 48px;
-        width: 50%;
+        font-size: xx-large;
+        width: 100%;
+        top: 10%;
     }
     .main {
         width: 100%;
@@ -241,7 +269,7 @@ footer {
         padding: 3% 0 3%;
     }
     .main-box-1-text {
-        font-size: 100%;
+        font-size: 66%;
     }
     .main-box-1-img img {
         width: 100%;
@@ -256,7 +284,7 @@ footer {
         padding: 3% 0 3%;
     }
     .main-box-2-text {
-        font-size: 100%;
+        font-size: 66%;
     }
     .main-box-2-img img {
         width: 100%;
@@ -271,7 +299,7 @@ footer {
         padding: 3% 0 3%;
     }
     .main-box-3-text {
-        font-size: 100%;
+        font-size: 66%;
     }
     .main-box-3-img img {
         width: 100%;
@@ -279,7 +307,7 @@ footer {
     }
     .contents {
         width: 100%;
-        height: 500px;
+        height: 200px;
         background-size: cover;
         text-align: justify;
     }
